workspace/log/build_2023-10-02_20-31-54/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:15: error: expected ‘(’ before ‘current_state_’
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |               ^~~~~~~~~~~~~~
      |               (
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:46: warning: comparison with string literal results in unspecified behavior [-Waddress]
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |                                              ^~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:44:54: error: expected ‘)’ before ‘{’ token
   44 |         while current_state_.mode.c_str() != "GUIDED"{
      |               ~~~~~~~~~~~~~~                         ^
      |                                                      )
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:116: error: too many arguments to function ‘std::shared_ptr<_Tp> std::make_shared(_Args&& ...) [with _Tp = mavros_msgs::srv::CommandBool_Request_<std::allocator<void> >; _Args = {}]’
   48 |         arming_client_->async_send_request(std::make_shared<mavros_msgs::srv::CommandBool::Request>({"value: True"}))
      |                                                                                                                    ^
In file included from /usr/include/c++/9/memory:81,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:144,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/usr/include/c++/9/bits/shared_ptr.h:714:5: note: declared here
  714 |     make_shared(_Args&&... __args)
      |     ^~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:118: error: expected ‘;’ before ‘do’
   48 |         arming_client_->async_send_request(std::make_shared<mavros_msgs::srv::CommandBool::Request>({"value: True"}))
      |                                                                                                                      ^
      |                                                                                                                      ;
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
